@@ -1,54 +1,69 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
 * [`dhcp`](#dhcp): A selector for configuring the DHCP server or client
 * [`dhcp::dhcpd`](#dhcpdhcpd): This class is used to start dhcpd and create dhcpd.conf
 
 ## Classes
 
-### dhcp
+### <a name="dhcp"></a>`dhcp`
 
 The client portion has not yet been implemented.
 
 #### Parameters
 
-The following parameters are available in the `dhcp` class.
+The following parameters are available in the `dhcp` class:
 
-##### `is_client`
+* [`is_client`](#is_client)
+* [`is_server`](#is_server)
+
+##### <a name="is_client"></a>`is_client`
 
 Data type: `Boolean`
 
 Not yet implemented
 
-Default value: `false`
+Default value: ``false``
 
-##### `is_server`
+##### <a name="is_server"></a>`is_server`
 
 Data type: `Boolean`
 
 Denotes that the system is a DHCP server
 
-Default value: `true`
+Default value: ``true``
 
-### dhcp::dhcpd
+### <a name="dhcpdhcpd"></a>`dhcp::dhcpd`
 
 This class is used to start dhcpd and create dhcpd.conf
 
 #### Parameters
 
-The following parameters are available in the `dhcp::dhcpd` class.
+The following parameters are available in the `dhcp::dhcpd` class:
 
-##### `package_name`
+* [`package_name`](#package_name)
+* [`enable_data_rsync`](#enable_data_rsync)
+* [`rsync_server`](#rsync_server)
+* [`rsync_timeout`](#rsync_timeout)
+* [`dhcpd_conf`](#dhcpd_conf)
+* [`firewall`](#firewall)
+* [`logrotate`](#logrotate)
+* [`syslog`](#syslog)
+* [`package_ensure`](#package_ensure)
+* [`rsync_source`](#rsync_source)
+
+##### <a name="package_name"></a>`package_name`
 
 Data type: `String[1]`
 
 The DHCP server package name
 
-##### `enable_data_rsync`
+##### <a name="enable_data_rsync"></a>`enable_data_rsync`
 
 Data type: `Boolean`
 
@@ -56,26 +71,26 @@ Enable the retrieval of the DHCP configuration from an rsync server
 
 * NOTE: This will be disabled by default at some point in the future
 
-Default value: `true`
+Default value: ``true``
 
-##### `rsync_server`
+##### <a name="rsync_server"></a>`rsync_server`
 
 Data type: `String[1]`
 
 The address of the server from which to pull the DHCPD
 configuration
 
-Default value: simplib::lookup('simp_options::rsync::server', { 'default_value' => '127.0.0.1' })
+Default value: `simplib::lookup('simp_options::rsync::server', { 'default_value' => '127.0.0.1' })`
 
-##### `rsync_timeout`
+##### <a name="rsync_timeout"></a>`rsync_timeout`
 
 Data type: `Stdlib::Compat::Integer`
 
 The connection timeout when communicating with the rsync server
 
-Default value: simplib::lookup('simp_options::rsync::timeout', { 'default_value' => '2' })
+Default value: `simplib::lookup('simp_options::rsync::timeout', { 'default_value' => '2' })`
 
-##### `dhcpd_conf`
+##### <a name="dhcpd_conf"></a>`dhcpd_conf`
 
 Data type: `Optional[String[1]]`
 
@@ -83,45 +98,45 @@ The entire contents of the /etc/dhcpd.conf configuration file
 
 * If this is set, `$enable_data_rsync` will be forced to `false`
 
-Default value: `undef`
+Default value: ``undef``
 
-##### `firewall`
+##### <a name="firewall"></a>`firewall`
 
 Data type: `Boolean`
 
 Whether or not to include the SIMP iptables class
 
-Default value: simplib::lookup('simp_options::firewall', { 'default_value' => false })
+Default value: `simplib::lookup('simp_options::firewall', { 'default_value' => false })`
 
-##### `logrotate`
+##### <a name="logrotate"></a>`logrotate`
 
 Data type: `Boolean`
 
 Whether or not to include the SIMP logrotate class
 
-Default value: simplib::lookup('simp_options::logrotate', { 'default_value' => false })
+Default value: `simplib::lookup('simp_options::logrotate', { 'default_value' => false })`
 
-##### `syslog`
+##### <a name="syslog"></a>`syslog`
 
 Data type: `Boolean`
 
 Whether or not to include the SIMP rsyslog class
 
-Default value: simplib::lookup('simp_options::syslog', { 'default_value' => false })
+Default value: `simplib::lookup('simp_options::syslog', { 'default_value' => false })`
 
-##### `package_ensure`
+##### <a name="package_ensure"></a>`package_ensure`
 
 Data type: `String[1]`
 
 The ensure status of the dhcp package
 
-Default value: simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })
+Default value: `simplib::lookup('simp_options::package_ensure', { 'default_value' => 'installed' })`
 
-##### `rsync_source`
+##### <a name="rsync_source"></a>`rsync_source`
 
 Data type: `String[1]`
 
 
 
-Default value: "dhcpd_${::environment}_${facts['os']['name']}/dhcpd.conf"
+Default value: `"dhcpd_${::environment}_${facts['os']['name']}/dhcpd.conf"`
 
